:hammer:add prefixed and compressed css

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "OhMyFood",
   "main": "index.html",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:public/css/style.css",
-    "prefix":"postcss ./public/style.css --use autoprefixer -d ./public/css/prefixed/"
+    "sass": "sass --watch ./sass/main.scss:public/css/style.css --style compressed ",
+    "prefix":"postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "repository": {
     "type": "git",
